autostart: Stop messing with XDG_CURRENT_DESKTOP

The use of the XDG_CURRENT_DESKTOP variable predates the actual
standardization that only happened recently, and indeed does not
work when the variable contains a colon-separated list as allowed
by the new standard. Stop using it altogether, so GIO can handle it
for us (which it will soon).

https://bugzilla.gnome.org/show_bug.cgi?id=729575